@@ -92,12 +92,16 @@ install(TARGETS dctimestep findglare getinfo glarendx rad ranimate
 
 if(WIN32)
   install(PROGRAMS genBSDF.pl DESTINATION bin)
+  install(PROGRAMS ltview.pl DESTINATION bin)
+  install(PROGRAMS ltpict.pl DESTINATION bin)
   install(PROGRAMS genklemsamp.pl DESTINATION bin)
   install(PROGRAMS genskyvec.pl DESTINATION bin)
   install(FILES tregsamp.dat DESTINATION lib)
   install(PROGRAMS objview.rb DESTINATION bin)
 else()
   install(PROGRAMS genBSDF.pl DESTINATION bin RENAME genBSDF)
+  install(PROGRAMS ltview.pl DESTINATION bin RENAME ltview)
+  install(PROGRAMS ltpict.pl DESTINATION bin RENAME ltpict)
   install(PROGRAMS genklemsamp.pl DESTINATION bin RENAME genklemsamp)
   install(PROGRAMS genskyvec.pl DESTINATION bin RENAME genskyvec)
   install(PROGRAMS objview.csh DESTINATION bin RENAME objview)
