@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.70 2014/04/08 23:46:05 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.71 2014/04/15 22:36:25 greg Exp $
 #
 # Radiance makefile for utility programs
 #
@@ -27,7 +27,8 @@ all:	$(PROGS)
 
 install:	all $(SPECIAL) objview.pl objpict.pl glare.csh dayfact.csh \
 rlux.csh raddepend.csh trad.wsh objline.csh compamb.csh vinfo.csh \
-genambpos.csh fieldcomb.csh genklemsamp.pl genskyvec.pl genBSDF.pl tregsamp.dat
+ltview.pl ltpict.pl genambpos.csh fieldcomb.csh genklemsamp.pl \
+genskyvec.pl genBSDF.pl tregsamp.dat
 	cp $(PROGS) $(INSTDIR)
 	cp objview.pl $(INSTDIR)/objview
 	cp objline.csh $(INSTDIR)/objline
@@ -44,6 +45,8 @@ genambpos.csh fieldcomb.csh genklemsamp.pl genskyvec.pl genBSDF.pl tregsamp.dat
 	cp genklemsamp.pl $(INSTDIR)/genklemsamp
 	cp genskyvec.pl $(INSTDIR)/genskyvec
 	cp genBSDF.pl $(INSTDIR)/genBSDF
+	cp ltview.pl $(INSTDIR)/ltview
+	cp ltpict.pl $(INSTDIR)/ltpict
 	cd $(INSTDIR) ; chmod 755 objview objpict \
 		glare dayfact debugcal rlux raddepend objline \
 		compamb vinfo genambpos fieldcomb genklemsamp \
